fix UserLink vertical align on credits

--- a/frontend/src/components/user/UserLink.module.css
+++ b/frontend/src/components/user/UserLink.module.css
@@ -6,7 +6,7 @@
 
     padding-left: 3px;
 
-    vertical-align: middle;
+    vertical-align: bottom;
 }
 
 .user:any-link {
